WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144498
Inline some small methods instead of them being EXPORT'd and out of line
https://bugs.webkit.org/show_bug.cgi?id=144498
Summary
Inline some small methods instead of them being EXPORT'd and out of line
Joseph Pecoraro
Reported
2015-05-01 13:07:03 PDT
* SUMMARY Inline some small methods instead of them being EXPORT'd and out of line. The EXPORT should not be needed if the methods are inlined.
Attachments
[PATCH] Proposed Fix
(2.29 KB, patch)
2015-05-01 13:07 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-05-01 13:07:52 PDT
Created
attachment 252167
[details]
[PATCH] Proposed Fix
Darin Adler
Comment 2
2015-05-01 16:12:01 PDT
Comment on
attachment 252167
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=252167&action=review
> Source/WebCore/page/Page.h:443 > + RefPtr<WheelEventTestTrigger> testTrigger() const { return m_testTrigger; }
Reading this I realize that this accessor should return a raw pointer, not a RefPtr.
WebKit Commit Bot
Comment 3
2015-05-01 17:01:16 PDT
Comment on
attachment 252167
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 252167 Committed
r183700
: <
http://trac.webkit.org/changeset/183700
>
WebKit Commit Bot
Comment 4
2015-05-01 17:01:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug