Inline some small methods instead of them being EXPORT'd and out of line https://bugs.webkit.org/show_bug.cgi?id=144498

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-05-01
Reviewed by Darin Adler.

* page/Page.cpp:
(WebCore::Page::testTrigger): Deleted.
(WebCore::Page::clearTrigger): Deleted.
(WebCore::Page::expectsWheelEventTriggers): Deleted.
* page/Page.h:
(WebCore::Page::testTrigger):
(WebCore::Page::clearTrigger):
(WebCore::Page::expectsWheelEventTriggers):

Canonical link: https://commits.webkit.org/162537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183700 268f45cc-cd09-0410-ab3c-d52691b4dbfc